--- a/ToDoListProject/wwwroot/index.html
+++ b/ToDoListProject/wwwroot/index.html
@@ -27,6 +27,8 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="js/sortable.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
